# atrinik

./: .bzrignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  INSTALL  README  README.md  build.config  build.sh  linux_start_client.sh  linux_start_editor.sh  linux_start_server.sh  uncrustify.cfg  w32_start_client.bat  w32_start_editor.bat  w32_start_server.bat
client/: CMakeLists.txt  Doxyfile  INSTALL  README  README.txt  atrinik.bat  atrinik.desktop  atrinik.rc  atrinik_updater.bat  build.config  client.cfg  interface.gui  scripts_autoload  settings.txt  timidity.cfg  updater.bat  valgrind.supp
client/bitmaps/: LICENSE
client/cache/: README.txt
client/data/: cmd_aliases.cfg  interface.cfg  settings.txt
client/data/keys/: atrinik4.pub
client/debian/: changelog  control  copyright  menu
client/doc/: mainpage.dox  scripting.dox
client/fonts/: pecita.otf.REMOVED.git-id
client/gfx_user/: README.txt
client/make/: README.txt
client/make/linux/: Makefile.in  README  config.status  configure  configure.ac  configure.in
client/make/win32/: MIDI  README.txt  sdl_dll.zip.REMOVED.git-id  update.py
client/make_win32/: timidity.cfg  update.py
client/make_win32/CodeBlocks/: Client.cbp  Client.layout  README  Setup.bat  Updater.cbp  client.cbp  client.workspace  client.xml
client/make_win32/VisualC/: Atrinik.sln  Atrinik.vcproj  README.txt  SDL_mixer.patch  Setup.bat  Setup_x64.bat
client/make_win32/tools/: atrinik_updater.bat  updater.bat
client/media/: .placeholder  LICENSE  License Note  media.txt
client/media/durations/: update.py
client/schemas/: Atrinik-ADS-7.xsd
client/settings/: cmd_aliases.cfg  interface.cfg
client/sfx/: LICENSE
client/src/: Makefile.in  adjust_proto.py  adler32.c  book.c  client.c  cmake.txt  commands.c  crc32.c  dialog.c  event.c  inffast.c  inflate.c  inftrees.c  inventory.c  item.c  main.c  map.c  menu.c  metaserver.c  misc.c  party.c  player.c  socket.c  sound.c  sprite.c  textwin.c  uncompr.c  widget.c  wrapper.c  zutil.c
client/src/client/: Makefile.in  animations.c  atrinik.REMOVED.git-id  book.c  client.c  cmd_aliases.c  commands.c  curl.c  curl_old.c  dialog.c  event.c  ignore.c  image.c  inventory.c  item.c  keybind.c  main.c  map.c  menu.c  metaserver.c  misc.c  party.c  player.c  player_shop.c  porting.c  region_map.c  resources.c  scripts.c  server_files.c  server_settings.c  settings.c  socket.c  sound.c  sprite.c  texture.c  textwin.c  tilestretcher.c  updates.c  upgrader.c  video.c  (+2 more)
client/src/events/: console.c  event.c  keys.c  macro.c  move.c
client/src/gui/: book.c  characters.c  connect.c  create_character.c  effects.c  fps.c  help.c  input.c  interface.c  inventory.c  keybind.c  login.c  main.c  map.c  menu_buttons.c  mplayer.c  notification.c  party.c  player_shop.c  protections.c  quickslots.c  range.c  region_map.c  settings.c  settings_client.c  settings_keybinding.c  skill_list.c  skills.c  spell_list.c  spells.c  target.c  textwin.c  updater.c
client/src/include/: binreloc.h  book.h  button.h  cflinux.h  client.h  cmake.h.def  commands.h  config.h  curl.h  define.h.in  dialog.h  effects.h  event.h  global.h  ignore.h  image.h  include.h  inffast.h  inflate.h  interface.h  inventory.h  item.h  keybind.h  list.h  main.h  map.h  menu.h  metaserver.h  misc.h  network_graph.h  notification.h  party.h  player.h  player_shop.h  popup.h  porting.h  progress.h  proto.h  region_map.h  resources.h  (+22 more)
client/src/toolkit/: SDL_clipboard.c  SDL_gfx.c  SDL_rotozoom.c  binreloc.c  button.c  bzr.c  clioptions.c  clipboard.c  cmake-post.txt  cmake-pre.txt  colorspace.c  console.c  curl.c  datetime.c  list.c  logger.c  math.c  memory.c  mempool.c  packet.c  path.c  pbkdf2.c  popup.c  porting.c  process.c  progress.c  range_buttons.c  scroll_buttons.c  scrollbar.c  sha1.c  shstr.c  signals.c  socket.c  socket_crypto.c  string.c  stringbuffer.c  text.c  text_input.c  toolkit.c  tooltip.c  (+2 more)
client/src/toolkit_gui/: SDL_gfx.c  SDL_rotozoom.c  button.c  clipboard.c  list.c  popup.c  progress.c  range_buttons.c  scrollbar.c  text.c  text_input.c  tooltip.c  widget.c
client/src/updater/: main.c
client/src/widgets/: button.c  list.c  text.c  widget.c
client/src/zlib/: Makefile.in  adler32.c  inffast.c  inflate.c  inftrees.c  uncompr.c  zutil.c
client/srv_files/: README.txt  hfiles
client/textures/: LICENSE
server/: CMakeLists.txt  Doxyfile  INSTALL  Makefile  README  README.txt  atrinikloop.sh  build.config  permissions.cfg  server.bat  server.cfg  server.sh  valgrind.supp
server-cpp/: CMakeLists.txt  archetype_parser.cc  archetype_parser.h  atrinik.cc  atrinik.h  base_object_type.cc  base_object_type.h  bit_flags.h  error.h  floor_object.cc  floor_object.h  game_object.cc  game_object.h  game_object_type.cc  game_object_type.h  game_object_type_internal.h  gfx_object_type.cc  gfx_object_type.h  lock.h  logging.conf  main.cc  map_object.cc  map_object.h  map_parser.cc  map_parser.h  map_tile.h  map_tile_object.cc  map_tile_object.h  object.cc  object.h  object_parser.cc  object_parser.h  region_object.cc  region_object.h  region_parser.cc  sign_object_type.cc  sign_object_type.h
server-cpp/src/: account.cc  account.h  animation.cc  animation.h  bit_flags.h  config.h.in  error.h  face.cc  face.h  lock.h  logger.cc  logger.h  main.cc  manager.h  server.cc  server.h
server-cpp/src/network/: game_command.cc  game_command.h  (+8 more)
server/doc/: commands.dox  custom_attributes.dox  directory_structure.dox  mainpage.dox  maps.dox  monsters.dox  objects.dox  plugin_python.dox  plugin_python_doc.dox  plugin_python_doc.py  treasure_style.dox  treasures.dox  types-extra  types-extra.dox  types-extra.py  waypoints.dox
server/install/: README.txt  settings
server/install_data/: dmfile  motd
server/make/: Python.txt  README.txt
server/make_win32/: update.py
server/plugins/: README  README.txt
server/src/: Makefile.in  cmake.txt
server/tools/: CParser.py  Makefile.in  atrinik_watchdog.c  atrinikloop.in  cmd_permissions.py  http_server.py  lockfile.py  plugin_python_doc.py  statistics_server.py
(+11498 files in other folders)
